radeonsi: don't use allocas for arrays with LLVM 3.8

It crashes.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97413